# Get-Employers-From-HH.RU

./: .gitignore  README.md  main.py  pyproject.toml
data/: database.ini
src/: DBManager.py  Db_Worker.py  HeadHunterAPI.py  read_config.py  user_interactive.py  utils.py
